// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`c-alert renders default html 1`] = `
<c-alert>
  <mock:shadow-root>
    <div class="c-alert">
      <div class="c-alert__content">
        <slot name="title"></slot>
        <slot></slot>
      </div>
    </div>
  </mock:shadow-root>
  <div slot="title">
    Quis porro id?
  </div>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, harum pariatur deserunt obcaecati maiores cupiditate magnam! Minima omnis libero sequi consectetur nesciunt. Facilis maxime ratione molestiae expedita quis porro id?
</c-alert>
`;

exports[`c-alert renders type: error 1`] = `
<c-alert type="error">
  <mock:shadow-root>
    <div class="c-alert c-alert--error">
      <svg height="22" viewBox="0 0 24 24" width="22">
        <path d="M12,2C17.53,2 22,6.47 22,12C22,17.53 17.53,22 12,22C6.47,22 2,17.53 2,12C2,6.47 6.47,2 12,2M15.59,7L12,10.59L8.41,7L7,8.41L10.59,12L7,15.59L8.41,17L12,13.41L15.59,17L17,15.59L13.41,12L17,8.41L15.59,7Z"></path>
      </svg>
      <div class="c-alert__content">
        <slot name="title"></slot>
        <slot></slot>
      </div>
    </div>
  </mock:shadow-root>
  <div slot="title">
    Quis porro id?
  </div>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, harum pariatur deserunt obcaecati maiores cupiditate magnam! Minima omnis libero sequi consectetur nesciunt. Facilis maxime ratione molestiae expedita quis porro id?
</c-alert>
`;

exports[`c-alert renders type: info 1`] = `
<c-alert type="info">
  <mock:shadow-root>
    <div class="c-alert c-alert--info">
      <svg height="22" viewBox="0 0 24 24" width="22">
        <path d="M13,9H11V7H13M13,17H11V11H13M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"></path>
      </svg>
      <div class="c-alert__content">
        <slot name="title"></slot>
        <slot></slot>
      </div>
    </div>
  </mock:shadow-root>
  <div slot="title">
    Quis porro id?
  </div>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, harum pariatur deserunt obcaecati maiores cupiditate magnam! Minima omnis libero sequi consectetur nesciunt. Facilis maxime ratione molestiae expedita quis porro id?
</c-alert>
`;

exports[`c-alert renders type: success 1`] = `
<c-alert type="success">
  <mock:shadow-root>
    <div class="c-alert c-alert--success">
      <svg height="22" viewBox="0 0 24 24" width="22">
        <path d="M12 2C6.5 2 2 6.5 2 12S6.5 22 12 22 22 17.5 22 12 17.5 2 12 2M10 17L5 12L6.41 10.59L10 14.17L17.59 6.58L19 8L10 17Z"></path>
      </svg>
      <div class="c-alert__content">
        <slot name="title"></slot>
        <slot></slot>
      </div>
    </div>
  </mock:shadow-root>
  <div slot="title">
    Quis porro id?
  </div>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, harum pariatur deserunt obcaecati maiores cupiditate magnam! Minima omnis libero sequi consectetur nesciunt. Facilis maxime ratione molestiae expedita quis porro id?
</c-alert>
`;

exports[`c-alert renders type: warning 1`] = `
<c-alert type="warning">
  <mock:shadow-root>
    <div class="c-alert c-alert--warning">
      <svg height="22" viewBox="0 0 24 24" width="22">
        <path d="M13 14H11V9H13M13 18H11V16H13M1 21H23L12 2L1 21Z"></path>
      </svg>
      <div class="c-alert__content">
        <slot name="title"></slot>
        <slot></slot>
      </div>
    </div>
  </mock:shadow-root>
  <div slot="title">
    Quis porro id?
  </div>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, harum pariatur deserunt obcaecati maiores cupiditate magnam! Minima omnis libero sequi consectetur nesciunt. Facilis maxime ratione molestiae expedita quis porro id?
</c-alert>
`;
